View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0023694 | Open CASCADE | OCCT:DRAW | public | 2013-01-10 12:02 | 2013-04-29 15:23 |
Reporter | Assigned To | ||||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
Platform | 64 | OS | Windows | ||
Product Version | 6.5.4 | ||||
Target Version | 6.6.0 | Fixed in Version | 6.6.0 | ||
Summary | 0023694: The variable 'pBuff" is being used without being initialized | ||||
Description | In debug version of the Draw (cmake was used to generate Draw) the error message appears with content: Run-Time Check Failure #3 - The variable 'pBuff" is being used without being initialized | ||||
Steps To Reproduce | 1. Generate cmake OCCT meta-project 2. Generate Visual Studio 2008 OCCT solution (debug version) 3. Build the one 4. Install build results by building the INSTALL project placed in OCCT solution 5. Run draw.bat batch file placed from the "install" folder | ||||
Tags | No tags attached. | ||||
Test case number | |||||
|
Reviewed, please test |
|
Patch is ready for test in CR23694 OCCT branch. |
|
Fixes are ready for reviewing in CR23694 OCCT branch |
|
After fix Draw is launched correctly but the message below appears in terminal: Hint: use "pload ALL" command to load standard commands Environment variable CSF_DEBUG_MODE setted. Environment variable CSF_DEBUG_MODE setted. Draw[1]> It seems it is not quite correct. |
|
The straight and simple fix is pushed to branch CR23694_1 |
Date Modified | Username | Field | Change |
---|---|---|---|
2013-01-10 12:02 |
|
New Issue | |
2013-01-10 12:02 |
|
Assigned To | => ibs |
2013-01-10 12:16 |
|
File Added: 0001-pBuff-initialized-to-NULL.patch | |
2013-01-10 12:18 |
|
Status | new => resolved |
2013-01-10 12:35 |
|
File Deleted: 0001-pBuff-initialized-to-NULL.patch | |
2013-01-10 13:39 |
|
File Added: 0001-pBuff-initialized-to-NULL.patch | |
2013-01-10 13:41 |
|
File Deleted: 0001-pBuff-initialized-to-NULL.patch | |
2013-01-10 13:43 |
|
Tag Attached: http://git.dev.opencascade.org/gitweb/?p=occt.git;a=blobdiff;f=src/OSD/OSD_signal.cxx;h=73d3a8866dbb | |
2013-01-10 13:43 |
|
Tag Detached: http://git.dev.opencascade.org/gitweb/?p=occt.git;a=blobdiff;f=src/OSD/OSD_signal.cxx;h=73d3a8866dbb | |
2013-01-10 13:44 |
|
Additional Information Updated | |
2013-01-10 13:44 |
|
Additional Information Updated | |
2013-01-10 13:47 |
|
Note Added: 0022929 | |
2013-01-10 13:47 |
|
Assigned To | ibs => bugmaster |
2013-01-10 13:47 |
|
Status | resolved => reviewed |
2013-01-10 13:48 |
|
Note Added: 0022930 | |
2013-01-10 13:48 |
|
Note Edited: 0022930 | |
2013-01-10 15:38 |
|
Assigned To | bugmaster => ibs |
2013-01-10 18:26 | kgv | Assigned To | ibs => bugmaster |
2013-01-10 18:26 | kgv | Target Version | Unscheduled => 6.6.0 |
2013-01-11 09:40 |
|
Assigned To | bugmaster => ibs |
2013-01-11 09:40 |
|
Status | reviewed => assigned |
2013-01-11 09:42 |
|
Note Added: 0022938 | |
2013-01-11 09:42 |
|
Assigned To | ibs => kgv |
2013-01-11 09:42 |
|
Status | assigned => resolved |
2013-01-11 09:43 |
|
Severity | minor => trivial |
2013-01-11 09:43 |
|
Note Edited: 0022938 | |
2013-01-11 14:34 |
|
Assigned To | kgv => bugmaster |
2013-01-11 14:34 |
|
Status | resolved => reviewed |
2013-01-17 20:36 |
|
Assigned To | bugmaster => mkv |
2013-01-18 10:10 | bugmaster | Note Added: 0023018 | |
2013-01-28 14:49 | bugmaster | Assigned To | mkv => ibs |
2013-01-28 15:16 |
|
Status | reviewed => assigned |
2013-02-27 15:27 |
|
Note Added: 0023504 | |
2013-03-04 17:32 |
|
Changeset attached | => occt master 5788f543 |
2013-03-04 17:32 |
|
Assigned To | ibs => abv |
2013-03-04 17:32 |
|
Status | assigned => verified |
2013-03-04 17:32 |
|
Resolution | open => fixed |
2013-04-23 13:35 |
|
Status | verified => closed |
2013-04-29 15:23 |
|
Fixed in Version | => 6.6.0 |