0023694: The variable 'pBuff" is being used without being initialized

pBuff initialized by zero